# Android-Phone-Agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  项目设计文档.md
config/: pricing.yaml  profiles.yaml
docs/: android_app_design.md
phone_agent/: __init__.py  __main__.py
phone_agent/adb/: __init__.py  device.py  device_manager.py
phone_agent/agent/: __init__.py  actions.py  core.py
phone_agent/billing/: __init__.py  loader.py  manager.py  models.py
phone_agent/config/: __init__.py  profile.py  settings.py
phone_agent/ocr/: __init__.py  engine.py
phone_agent/prompts/: __init__.py  manager.py  templates.py
phone_agent/providers/: __init__.py  anthropic_client.py  base.py  factory.py  gemini_client.py  openai_client.py
phone_agent/tui/: __init__.py  app.py
phone_agent/tui/screens/: __init__.py  settings.py
prompts/: README.md
prompts/apps/: jx3wj.yaml  taobao.yaml  wechat.yaml
prompts/features/: compare_price.yaml  search.yaml
prompts/system/: default_zh.md  task_based_zh.md
